force-app/main/default/objects/Sender__c/Sender__c.object-meta.xml
<CustomObject>
    <label>Sender</label>
    <pluralLabel>Senders</pluralLabel>
    <nameField><label>Sender Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>