force-app/main/default/objects/Sender__c/fields/Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>Sender_Address__c</fullName>
    <label>Sender Address</label>
    <type>Location</type>
    <scale>6</scale>
</CustomField>