force-app/main/default/objects/Sender__c/fields/Sender_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sender_Contact__c</fullName>
    <label>Sender Contact</label>
    <type>Phone</type>
</CustomField>